force-app/main/default/objects/BulkLoadRequestLineItem__c/BulkLoadRequestLineItem__c.object-meta.xml
<CustomObject>
    <description>Individual item included in a bulk load request. Line items are processed asynchronously in batches. Line items processed successfully are purged to reclaim storage capacity.</description>
    <label>Bulk Load Request Line Item</label>
    <nameField>
        <displayFormat>BLLI-{00000000}</displayFormat>
        <label>Bulk Load Request Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Load Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>