force-app/main/default/objects/BulkLoadRequestLineItem__c/fields/BulkLoadRequest__c.field-meta.xml
<CustomField>
    <fullName>BulkLoadRequest__c</fullName>
    <description>Parent bulk load request that included this line item.</description>
    <label>Bulk Load Request</label>
    <referenceTo>BulkLoadRequest__c</referenceTo>
    <relationshipLabel>Bulk Load Request Line Items</relationshipLabel>
    <relationshipName>BulkLoadRequestLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>